--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <main>
         <section id="left" class="content">
             <h1>Learn to code by watching others</h1>
-            <p>See how experienced developers solve problems in real-time.<br>
-                Watching scripted tutorials is great, but understanding how<br>
+            <p>See how experienced developers solve problems in real-time.
+                Watching scripted tutorials is great, but understanding how
                 developers think is invaluable.
             </p>
         </section>
         <section id="right" class="content">
             <div class="trial">Try it free 7 days <span>&nbsp; then $20/mo. thereafter</span></div>
-            <form class="trial">
+            <form>
                 <input id="fname" class="boxes" type="text" placeholder="First Name" required>
                 <input id="lname" class="boxes" type="text" placeholder="Last Name" required>
                 <input id="email" class="boxes" type="email" placeholder="Email Address" required>
